@@ -21,10 +21,13 @@ package com.aelitis.azureus.core.messenger.config;
 import java.util.HashMap;
 
 import org.gudy.azureus2.core3.config.COConfigurationManager;
+import org.gudy.azureus2.core3.util.FileUtil;
 
 import com.aelitis.azureus.core.devices.*;
 import com.aelitis.azureus.core.messenger.PlatformMessage;
 import com.aelitis.azureus.core.messenger.PlatformMessenger;
+
+import org.gudy.azureus2.plugins.disk.DiskManagerFileInfo;
 
 /**
  * @author TuxPaper
@@ -41,13 +44,13 @@ public class PlatformDevicesMessenger
 
 	private static final String OP_QOS_FOUND_DEVICE = "qos-found-device";
 
-	private static final String OP_QOS_TRANCODE = "qos-trancode";
+	private static final String OP_QOS_TRANSCODE = "qos-transcode";
 
 	private static final String OP_QOS_PLAYBACK = "qos-playback";
 
 	private static final String OP_GET_PROFILES = "get-profiles";
 
-	private static final String OP_QOS_DROP = "get-profiles";
+	private static final String OP_QOS_TRANSCODE_REQUEST = "qos-transcode-request";
 
 	public static void qosTurnOn(boolean withITunes) {
 		if (!COConfigurationManager.getBooleanParameter(CFG_SEND_QOS, false)) {
@@ -69,58 +72,112 @@ public class PlatformDevicesMessenger
 			return;
 		}
 
+		HashMap<String, Object> map = new HashMap<String, Object>();
+		map.put("device-name", device.getName());
+		map.put("device-type", new Integer(device.getType()));
+		if (device instanceof DeviceMediaRenderer) {
+			DeviceMediaRenderer renderer = (DeviceMediaRenderer) device;
+			map.put("renderer-species",
+					Integer.valueOf(renderer.getRendererSpecies()));
+		}
+
 		PlatformMessage message = new PlatformMessage("AZMSG", LISTENER_ID,
-				OP_QOS_FOUND_DEVICE, new Object[] {
-					"device-name",
-					device.getName(),
-				}, 5000);
+				OP_QOS_FOUND_DEVICE, map, 5000);
 		message.setSendAZID(false);
 		PlatformMessenger.queueMessage(message, null);
 	}
 
-	public static void qosYouJustDropped(DeviceMediaRenderer renderer) {
-		if (!COConfigurationManager.getBooleanParameter(CFG_SEND_QOS, false)) {
+	public static void qosTranscodeRequest(TranscodeTarget transcodeTarget, String sourceRef) {
+		if (!COConfigurationManager.getBooleanParameter(CFG_SEND_QOS, false)
+				|| transcodeTarget == null) {
 			return;
 		}
 
-		HashMap<String,Object> map = new HashMap<String, Object>();
-		if (renderer != null) {
-			map.put("renderer-species", Integer.valueOf(renderer.getRendererSpecies()));
+		HashMap<String, Object> map = new HashMap<String, Object>();
+
+		Device device = transcodeTarget.getDevice();
+		if (device != null) { // should never be null..
+			map.put("device-name", device.getName());
+			map.put("device-type", new Integer(device.getType()));
 		}
-		
-		
+		if (transcodeTarget instanceof DeviceMediaRenderer) {
+			DeviceMediaRenderer renderer = (DeviceMediaRenderer) transcodeTarget;
+			map.put("renderer-species",
+					Integer.valueOf(renderer.getRendererSpecies()));
+		}
+		map.put("source-ref", sourceRef);
+
 		PlatformMessage message = new PlatformMessage("AZMSG", LISTENER_ID,
-				OP_QOS_DROP, map, 5000);
+				OP_QOS_TRANSCODE_REQUEST, map, 5000);
 		message.setSendAZID(false);
 		PlatformMessenger.queueMessage(message, null);
 	}
 
-	public static void qosTranscode(TranscodeJob job, int state,
-			DeviceMediaRenderer renderer, TranscodeProfile profile, String sourceExt,
-			long filesize, long processTime) {
-		if (!COConfigurationManager.getBooleanParameter(CFG_SEND_QOS, false)) {
+	public static void qosTranscode(TranscodeJob job, int stateOveride) {
+		if (!COConfigurationManager.getBooleanParameter(CFG_SEND_QOS, false)
+				|| job == null) {
 			return;
 		}
 
-		HashMap<String,Object> map = new HashMap<String, Object>();
-
-		map.put("job-state", Integer.valueOf(state));
-
-		if (job != null) {
-			if (state == TranscodeJob.ST_FAILED) {
-				map.put("job-error", job.getError());
-			}
+		TranscodeFile transcodeFile = job.getTranscodeFile();
+		DiskManagerFileInfo sourceFileInfo = null;
+		try {
+			sourceFileInfo = transcodeFile.getSourceFile();
+		} catch (Throwable t) {
 		}
-		map.put("profile-uid", profile.getUID());
-		map.put("render-species", Integer.valueOf(renderer.getRendererSpecies()));
-		map.put("process-time-ms", new Long(processTime));
-		map.put("source-ext", sourceExt);
-		if (filesize > 0) {
-			map.put("file-size", new Long(filesize));
+		DiskManagerFileInfo targetFileInfo = null;
+		try {
+			targetFileInfo = transcodeFile.getTargetFile();
+		} catch (Throwable t) {
 		}
+		TranscodeProfile profile = job.getProfile();
+		TranscodeTarget target = job.getTarget();
+		Device device = target.getDevice();
+		
+		HashMap<String, Object> map = new HashMap<String, Object>();
+
+		map.put("job-state", Integer.valueOf(stateOveride));
+
+		if (stateOveride == TranscodeJob.ST_FAILED) {
+			map.put("job-error", job.getError());
+		}
+
+		map.put("transcode-mode", new Integer(job.getTranscodeRequirement()));
+		map.put("transcode-required", new Boolean(transcodeFile.getTranscodeRequired()));
+
+		// These help us determine if the transcode is taking too long
+		map.put("transcode-video-width", new Long(transcodeFile.getVideoWidth()));
+		map.put("transcode-video-height", new Long(transcodeFile.getVideoHeight()));
+		map.put("transcode-video-duration-ms", new Long(transcodeFile.getDurationMillis()));
+		map.put("process-time-ms", new Long(job.getProcessTime()));
+
+		// Gotta know which device/profile/renderer we are transcoding to so we
+		// know what's should be worked on more
+		map.put("device-name", device.getName());
+		map.put("device-type", new Integer(device.getType()));
+		if (profile != null) {
+			map.put("profile-name", profile.getName());
+		}
+		
+		if (target instanceof DeviceMediaRenderer) {
+			DeviceMediaRenderer renderer = (DeviceMediaRenderer) target;
+			map.put("render-species", Integer.valueOf(renderer.getRendererSpecies()));
+		}
+
+		// Don't worry, we don't send the filename, just the extension.  This
+		// helps us figure out which file types are failing/succeeding the most
+		if (sourceFileInfo != null) {
+			map.put("source-file-ext", FileUtil.getExtension(sourceFileInfo.getFile().getName()));
+			map.put("source-file-size", new Long(sourceFileInfo.getLength()));
+		}
+		if (targetFileInfo != null) {
+			map.put("target-file-ext", FileUtil.getExtension(targetFileInfo.getFile().getName()));
+			map.put("target-file-size", new Long(targetFileInfo.getLength()));
+		}
+		
 
 		PlatformMessage message = new PlatformMessage("AZMSG", LISTENER_ID,
-				OP_QOS_TRANCODE, map, 5000);
+				OP_QOS_TRANSCODE, map, 5000);
 		message.setSendAZID(false);
 		PlatformMessenger.queueMessage(message, null);
 	}
